# restic-browser

./: .gitignore  LICENSE  README.md  app.go  biome.jsonc  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  package.json.md5  project.json  tsconfig.json  vite.config.ts  wails.json
.github/workflows/: main.yml  winget.yml
backend.wails/open/: open.go
backend.wails/program/: program.go  program_test.go  program_windows.go
backend.wails/restic/: location.go  repository.go
backend/program/: program_unix.go
backend/restic/: file.go  repository.go  restic.go  restic_test.go  snapshot.go
frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json
frontend/src/: App.vue  app.ts  appState.ts  hooks.ts  main.js  my-element.ts  store.js  store.ts  style.css
frontend/src/assets/css/: main.css
frontend/src/components/: Error.vue  FileList.vue  Password.vue  SelectRepo.vue  SnapshotList.vue  app-footer.ts  app-header.ts  error-message.ts  file-list-data-provider.ts  file-list.ts  location-dialog.ts  password-dialog.ts  snapshot-list.ts  spinner.ts
frontend/src/states/: app-state.ts  location.ts
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/lib/: ResticBrowserApp.d.ts  ResticBrowserApp.js  Restoric.d.ts  Restoric.js
frontend/wailsjs/go/main/: ResticBrowserApp.d.ts  ResticBrowserApp.js
lib/: app.go  errors.go  file.go  filetree.go  location.go  repository.go  restic.go  restoric.go  snapshot.go
lib/open/: open_darwin.go  open_linux.go  open_test.go  open_windows.go
lib/program/: program.go  program_unix.go  program_windows.go
lib/restic/: location.go  repository.go  restic.go  restic_test.go
lib/restic/test-repo/: config
src/: app.ts  biome.jsonc  hooks.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  command.rs  main.rs  restic.rs
src-tauri/src/restic/: command.rs  file.rs  location.rs  location_type.rs  snapshot.rs
src-tauri/src/restic/command/: group.rs
src-tauri/test/: test-repo.pass
src/backend/: app.ts  restic.ts
src/components/: app-footer.ts  app-header.ts  error-message.ts  file-list-data-provider.ts  file-list.ts  location-dialog.ts  location-password-dialog.ts  location-presets.ts  location-properties.ts  location-save-preset-dialog.ts  snapshot-list.ts  spinner.ts
src/states/: app-state.ts  location-preset.ts  location.ts
src/utils/: text-encoding.ts
